--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -25,7 +25,7 @@ ifndef::snippets[:snippets: ../../../target/snippets]
 [plantuml, Package-diagram, png]
 ----
 
-package com.spring.training.model {
+package com.spring.training.domain {
     class Country
     class Person
 }
@@ -58,7 +58,7 @@ package com.spring.training.controller {
 }
 
 
-com.spring.training.entity ..> com.spring.training.model
+com.spring.training.entity ..> com.spring.training.domain
 com.spring.training.repository ..> com.spring.training.entity
 com.spring.training.service ..> com.spring.training.repository
 com.spring.training.service ..> com.spring.training.exception
